# nano-code

./: .env.example  .gitignore  main.py  pyproject.toml
nano_code/: __init__.py  agent.py  chat_agent.py  cli.py  default.yaml  openai_client.py
nano_code/utils/: save.py
tests/: test_agent.py
