[project]
name = "nano-code"
version = "0.1.0"
description = "A simple coding agent CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "typer>=0.17.4",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
nano-code = "nano_code.cli:app"
